--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,20 @@
-/* hoja de estilo vacia */
+header{
+    background-color: aquamarine;
+}
+
+nav{
+    background-color: aqua;
+}
+
+main{
+    background-color: blueviolet;
+}
+
+article{
+    background-color: tomato;
+}
+
+footer{
+    background-color: black;
+    color: white;
+}
