--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ nav{
 
 aside{
     background-color: chartreuse;
-    height: 5em;
+    height: 3em;
 }
 
 main{
@@ -32,4 +32,44 @@ footer{
     background-color: black;
     color: white;
     height: 3em;
+}
+
+@media only screen and (max-width: 600px){
+    body{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    
+    header, nav, footer{
+        grid-column-start: 1;
+        grid-column-end: 5;
+    }
+
+    aside{
+        height: 100%;
+    }
+
+    main{
+        grid-column-start: 2;
+       grid-column-end: 5;
+    }
+
+}
+
+@media only screen and (max-width: 400px){
+    body{
+        text-align: center;
+    }
+
+    aside{
+        grid-row-start: 4;
+        grid-row-end: 5;
+        grid-column-start: 1;
+        grid-column-end: 5;
+    }
+
+    main{
+        grid-column-start: 1;
+        grid-column-end: 5;
+    }
 }
