Se modifico el color de fondo de las etiquetas

--- a/css/style.css
+++ b/css/style.css
@@ -2,34 +2,34 @@ body{
     font-size: 2em;
 }
 header{
-    background-color: aquamarine;
+    background-color: rgb(5, 112, 76);
     height: 3em;
 }
 
 nav{
-    background-color: aqua;
+    background-color: hsla(27, 100%, 50%, 0.918);
     height: 3em;
 }
 
 aside{
-    background-color: chartreuse;
+    background-color: rgb(162, 0, 255);
     height: 3em;
 }
 
 main{
-    background-color: blueviolet;    
+    background-color: rgba(255, 255, 0, 0.5);    
     height: 10em;    
 }
 
 article{
-    background-color: tomato;
+    background-color: lightgray;
     width: 90%;  
     height: 2em;  
     margin: 0.7em auto;
 }
 
 footer{
-    background-color: black;
+    background-color:blue;
     color: white;
     height: 3em;
 }
